# CCFA-hippocampus

./: .gitignore  README.md
Dataset/: convert.py
TemModel/: README.md  analyse.py  model.py  parameters.py  pyproject.toml  run.py  test.py  test_mode.py
TemModel/envs/: 4x4.json
