[project]
name = "torch_tem"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "",email = ""},
]
dependencies = ["torch>=2.6.0", "torchvision>=0.21.0", "torchaudio>=2.6.0", "scikit-learn>=1.6.1", "matplotlib>=3.10.1", "tensorboard>=2.19.0", "pip>=25.0.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
